[tool.poetry]
name = "socket-example"
version = "0.1.0"
description = "An example of a non-blocking socket on the server side"
authors = ["cleanishbot <cleanishbot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
